--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,6 @@
   "dependencies": {
     "angular-route": "^1.5.8",
     "angular": "^1.5.8",
-    "jquery": "^3.1.1"
+    "angular-bootstrap": "^2.4.0"
   }
 }
