--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "express-session": "^1.14.2",
+    "flipclock": "^0.7.8",
+    "jquery": "^3.1.1",
     "mongoose": "^4.6.5",
+    "multer": "^1.2.1",
+    "ngstorage": "^0.3.11",
     "path": "^0.12.7",
     "socket.io": "^1.5.1"
   }
